--- a/templates/adopcion/adopcion_list.html
+++ b/templates/adopcion/adopcion_list.html
@@ -30,6 +30,22 @@
             </td>
           </tr>
           {%endfor%}
+
+          {%elif adopcion%}
+          {%for persona in adopcion%}
+          <tr>
+            <th scope="row">{{persona.id}} </th>
+            <td>{{persona.nombre}} {{persona.apellido}} </td>
+            <td>{{persona.edad}} </td>
+            <td>{{persona.telefono}} </td>
+            <td>{{persona.email}} </td>
+            <td>{{persona.domicilio}} </td>
+            <td>
+                <a type="button" href="{%url 'adopcion:adopcion_funct_editar' persona.id %}" class="btn btn-primary"><img src="https://img.icons8.com/ios-glyphs/30/000000/edit--v4.png"/></a>
+                <a type="button" href="{%url 'adopcion:adopcion_funct_eliminar' persona.id%} " class="btn btn-danger">Eliminar</a>
+            </td>
+          </tr>
+          {%endfor%}
           {%else%}
           <h1>No hay registros de Personas</h1>
           {%endif%}
