--- a/templates/header/header.html
+++ b/templates/header/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         {%block home%}
-      <a class="navbar-brand" href="{%url 'mascota:index'%} ">HOME</a>
+      <a class="navbar-brand" href="">HOME</a>
       {%endblock%}
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -10,20 +10,26 @@
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
                 <a class="nav-link active dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Mascota-Func
+                  Mascota
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="{%url 'mascota:mascota_crear'%} ">Agregar</a></li>
-                  <li><a class="dropdown-item" href="{%url 'mascota:mascota_lista'%} ">Lista</a></li>
+                  <li><a class="dropdown-item" href="{%url 'mascota:mascota_crear'%} ">Agregar(func)</a></li>
+                  <li><a class="dropdown-item" href="{%url 'mascota:mascota_lista'%} ">Lista(func)</a></li>
+                  <li><hr></li>
+                  <li><a class="dropdown-item" href="{%url 'mascota:mascota_class_nuevo'%} ">Agregar(class)</a></li>
+                  <li><a class="dropdown-item" href="{%url 'mascota:mascota_class_lista'%} ">Lista(class)</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Adopcion-Class
+                  Adopcion
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="{%url 'adopcion:adopcion_lista'%}">Lista</a></li>
-                  <li><a class="dropdown-item" href="{%url 'adopcion:adopcion_crear'%}">Agregar</a></li>
+                  <li><a class="dropdown-item" href="{%url 'adopcion:adopcion_crear'%}">Agregar(class)</a></li>
+                  <li><a class="dropdown-item" href="{%url 'adopcion:adopcion_lista'%}">Lista(class)</a></li>
+                  <li><hr></li>
+                  <li><a class="dropdown-item" href="{%url 'adopcion:adopcion_funct_crear'%}">Agregar(func)</a></li>
+                  <li><a class="dropdown-item" href="{%url 'adopcion:adopcion_funct_lista'%}">Lista(func)</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
