--- a/templates/mascota/api_mascota_form.html
+++ b/templates/mascota/api_mascota_form.html
@@ -5,7 +5,7 @@
 <form method="POST" enctype="multipart/form-data" >
     <div class="m-4">
         {%csrf_token%}
-        {{form.as_p}}
+        {{form.as_ul}}
         <button type="submit" class="btn btn-primary">Guardar</button>
     </div>
    
